prevent keyboard wrapping

--- a/packages/react/src/FilteredActionList/FilteredActionList.stories.module.css
+++ b/packages/react/src/FilteredActionList/FilteredActionList.stories.module.css
@@ -12,3 +12,10 @@
   border: var(--borderWidth-thin) solid;
   box-sizing: border-box;
 }
+
+
+.FilteredActionListVirtualizedContainer {
+  border: var(--borderWidth-thin) solid;
+  padding: var(--base-size-8);
+  height: 200px;
+}
